fix(views/history): Fix missing margin for delete status text

--- a/src/views/history/styles.scss
+++ b/src/views/history/styles.scss
@@ -6,8 +6,8 @@
   align-items: center;
 }
 
-.history-view__cancel-button {
-  margin-right: $margin__button;
+.history-view__status {
+  margin-left: $margin__button;
 }
 
 .history-view__loading-container {
